--- a/CSS/style.css
+++ b/CSS/style.css
@@ -58,6 +58,7 @@ html {
   /* PERCENTAGE OF USERS BROWSER FONT-SIXE SETTING */
   font-size: 62.5%;
   background-color: #fcfcfc;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -261,7 +262,6 @@ header {
 
 .main-section {
   margin-top: 70px;
-  max-width: 1300px;
   overflow: hidden;
 }
 
@@ -285,18 +285,36 @@ header {
 /* **************************** */
 /* GENERAL EXTRA */
 /* **************************** */
+.container {
+  padding: 11rem 3.6rem;
+}
 
-.page-section {
-  padding: 9.6rem 0 9.6rem 0;
-  margin-left: 3.6rem;
-  margin-right: 3.6rem;
+.section {
+  gap: 4.8rem;
+  width: 80%;
+}
+
+.inner-section {
+  gap: 3.6rem;
+}
+
+.section-img-box img {
+  width: 100%;
+  filter: opacity(95%);
 }
 
 .page-heading {
   color: #6d7856;
   text-transform: uppercase;
   letter-spacing: 0.3rem;
+}
+
+.h1-heading {
   margin-bottom: 8rem;
+}
+
+.h2-heading {
+  margin-bottom: 3rem;
 }
 
 .subheading {
@@ -322,15 +340,6 @@ header {
 /* HERO SECTION HOME PAGE*/
 /* **************************** */
 
-.hero-section {
-  padding: 6.4rem 0 0 8rem;
-}
-
-.hero {
-  padding: 4.8rem;
-  gap: 4.8rem;
-}
-
 .hero-heading {
   color: #6d7856;
   text-transform: uppercase;
@@ -348,73 +357,23 @@ header {
   margin-bottom: 1.6rem;
 }
 
-.hero-img-box img {
-  width: 100%;
-  filter: opacity(95%);
-}
-
-/* **************************** */
-/* LINK TO ALL PATTERNS PAGE  */
-/* **************************** */
-
-.btn-light-top {
-  margin-left: 3.2rem;
-  background-color: inherit;
-}
-
-.btn-light:link,
-.btn-light:visited {
-  color: #576045;
-  text-decoration: none;
-  border-bottom: 1px solid #e2e4dd;
-  transition: all 0.4s;
-  text-transform: uppercase;
-}
-
-.btn-light:hover,
-.btn-light:active,
-.btn-light-top:hover,
-.btn-light-top:active {
-  color: #6d7856;
-  border: none;
-}
-
-/* **************************** */
-/* ABOUT SECTION */
-/* **************************** */
-
-.about-section {
-  width: 85%;
-  gap: 4.8rem;
-  margin-left: auto;
-  margin-right: auto;
-  padding-bottom: 9.6rem;
-}
-
-.about-img {
-  width: 80%;
-}
-
 /* **************************** */
 /* INSTAGRAM SECTION */
 /* **************************** */
 
 .instagram-section {
-  margin: 9.6rem 0 9.6rem 0;
+  background-color: #8a9378;
 }
 
 .instagram-box {
-  padding-top: 3.6rem;
   width: 80%;
-  background-color: #e2e4dd;
 }
 
 .instagram-heading {
   font-weight: 400;
-  color: #414834;
-  margin-bottom: 1rem;
+  color: #fffbf6;
+  margin-bottom: 1.5rem;
   text-decoration: none;
-  margin-left: 3.6rem;
   margin-right: 3.6rem;
   text-transform: uppercase;
   letter-spacing: 0.5rem;
@@ -423,7 +382,7 @@ header {
 
 .instagram-heading:hover,
 .instagram-heading:active {
-  color: #6d7856;
+  color: #e2e4dd;
 }
 
 .instagram-link:link,
@@ -434,6 +393,7 @@ header {
 .instagram-gallery {
   gap: 1.6rem;
   padding: 1.6rem;
+  background-color: #fffbf6;
 }
 
 .gallery-item {
@@ -448,6 +408,171 @@ header {
 
 .gallery-item img:hover {
   transform: scale(1.1);
+}
+
+/* **************************** */
+/* ABOUT SECTION */
+/* **************************** */
+
+/* **************************** */
+/* PATTERNS SECTION  */
+/* **************************** */
+
+.pattern-section {
+  background-color: #8a9378;
+}
+
+.pattern-heading {
+  color: #fffbf6;
+}
+
+.pattern-sheet {
+  padding: 2.4rem 0 9.6rem 0;
+}
+
+/* PATTERN CARD */
+.pattern-card {
+  background-color: #e2e4dd;
+  padding: 2.4rem;
+  box-shadow: 0 2.4rem 4.8rem rgba(52, 58, 64, 0.08);
+  transition: all 0.4s;
+  position: relative;
+  overflow: hidden;
+}
+
+.pattern-card:hover {
+  transform: translateY(-1.2rem);
+  cursor: pointer;
+}
+
+.pattern-card-item:hover {
+  cursor: pointer;
+}
+
+.pattern-card-item {
+  overflow: hidden;
+  transition: all 0.4s;
+}
+
+.pattern-card-item img {
+  width: 100%;
+  filter: opacity(90%);
+  margin-bottom: 1.6rem;
+  display: block;
+}
+
+.pattern-card-heading {
+  grid-column: 1 / -1;
+  font-size: 1.6rem;
+  color: #576045;
+  text-transform: uppercase;
+  letter-spacing: 1.2px;
+  margin-bottom: 0.5rem;
+}
+
+.pattern-card-price {
+  color: #576045;
+  font-weight: 400;
+  font-size: 1.6rem;
+}
+
+/* LANGUAGE TAGS */
+
+.norsk::after {
+  content: "norsk";
+  font-size: 1.6rem;
+  color: #6d7856;
+  background-color: #e2e4dd;
+  position: absolute;
+  top: 4%;
+  left: 5%;
+  padding: 0.7rem 1.4rem;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.svenska::after {
+  content: "svenska";
+  font-size: 1.6rem;
+  color: #6d7856;
+  background-color: #e2e4dd;
+  position: absolute;
+  top: 4%;
+  left: 5%;
+  padding: 0.7rem 1.4rem;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.english::after {
+  content: "english";
+  font-size: 1.6rem;
+  color: #6d7856;
+  background-color: #e2e4dd;
+  position: absolute;
+  top: 4%;
+  left: 5%;
+  padding: 0.7rem 1.4rem;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+/* FILTER MENU */
+
+.dropdown {
+  width: 22rem;
+  position: relative;
+  box-shadow: 0 2.4rem 4.8rem rgba(52, 58, 64, 0.08);
+}
+
+.dropbtn {
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 2rem;
+  color: #fffbf6;
+  letter-spacing: 0.5rem;
+  padding: 0 0 1rem 1rem;
+  cursor: pointer;
+  border: none;
+  background-color: #8a9378;
+  transition: all 0.5s;
+}
+
+.dropbtn:hover,
+.dropbtn:active {
+  color: #e2e4dd;
+}
+
+.dropDownContent {
+  position: absolute;
+  display: none;
+  flex-direction: column;
+  gap: 2rem;
+  z-index: 1;
+  width: 22rem;
+  padding: 1rem;
+  background-color: rgb(138, 147, 120);
+  transition: all 0.5s;
+  border-bottom: 0.1rem solid #e2e4dd;
+  border-left: 0.1rem solid #e2e4dd;
+  border-right: 0.1rem solid #e2e4dd;
+}
+
+.open {
+  display: flex;
+}
+
+.filter-item {
+  font-size: 2rem;
+  color: #fffbf6;
+  font-weight: 400;
+  text-decoration: none;
+  padding: 0.5rem 1rem;
+}
+
+.filter-item:hover {
+  cursor: pointer;
+  background-color: rgba(226, 228, 221, 0.193);
 }
 
 /* **************************** */
@@ -492,24 +617,6 @@ header {
 }
 
 /* **************************** */
-/* TO TOP BUTTON - ALL PAGES */
-/* **************************** */
-
-.to-top-col {
-  text-align: center;
-  margin-bottom: 4.8rem;
-}
-
-.to-top-icon {
-  color: #6d7856;
-  font-size: 4.8rem;
-}
-
-.to-top-icon:hover {
-  color: #8a9378;
-}
-
-/* **************************** */
 /* LOCAL PAGES */
 /* **************************** */
 
@@ -522,12 +629,113 @@ header {
 }
 
 /* **************************** */
-/* FOOTER SECTION ALL PAGES*/
+/* EACH PATTERN PAGE */
+/* **************************** */
+
+.pattern-grid {
+  display: grid;
+  gap: 6.4rem;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+
+.pattern-img-section {
+  grid-column: 1 / 4;
+  display: grid;
+  grid-template-columns: 1fr 5fr;
+  gap: 3.2rem;
+}
+
+.pattern-img {
+  width: 100%;
+  padding-top: 1rem;
+  filter: opacity(50%);
+  cursor: pointer;
+}
+
+.main-img {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #8a9378;
+  grid-column: 2;
+}
+
+.pattern-img-main {
+  grid-column: 2 / -1;
+}
+
+.pattern-img-other {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  grid-column: 1;
+  grid-row: 1;
+  margin-right: auto;
+}
+
+.sticker {
+  color: #8a9378;
+  letter-spacing: 0.15rem;
+  text-transform: uppercase;
+}
+
+.pattern-text {
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
+}
+
+.text-heading {
+  color: #576045;
+  font-size: 2.4rem;
+  text-transform: uppercase;
+  font-weight: 400;
+  letter-spacing: 0.5rem;
+}
+
+.description {
+  color: #6d7856;
+  font-size: 1.6rem;
+  line-height: 1.5;
+}
+
+.description span {
+  font-weight: 600;
+  color: #6d7856;
+}
+
+.btn--with-icon {
+  width: 60%;
+  margin-top: 3.6rem;
+  cursor: pointer;
+}
+
+.add-cart-icon--btn {
+  color: #fffbf6;
+  margin-right: 1rem;
+}
+
+.pattern-info {
+  grid-row: 2;
+  grid-column: 1 / 4;
+}
+
+.pattern-description {
+  grid-column: 4 / -1;
+  padding-right: 10rem;
+}
+
+/* **************************** */
+/* FOOTER SECTION*/
 /* **************************** */
 
 .footer {
-  padding: 9.6rem 6.4rem;
   border-top: 1px solid #eee;
+  text-align: center;
+}
+
+.footer-section {
+  align-items: center;
 }
 
 .fa-instagram,
