--- a/CSS/style.css
+++ b/CSS/style.css
@@ -26,7 +26,7 @@ Default: 1
 - #FCFCFC MAIN BACKGROUND
 - #e2e4dd Darker background
 
-- #fffbf6 WHITE TEXT COLOR
+- #FCFFF7 WHITE TEXT COLOR
 
 - #e2e4dd BORDER COLOR
 - #eee BORDER COLOR light
@@ -129,6 +129,10 @@ body {
 .gap-3-2 {
   gap: 3.2rem;
 }
+.gap-4-8 {
+  gap: 4.8rem;
+}
+
 .gap-6-4 {
   gap: 6.4rem;
 }
@@ -243,7 +247,7 @@ header {
 }
 
 .main-nav-list-mobile {
-  background-color: rgba(253, 242, 233, 0.96);
+  background-color: rgba(252, 255, 247, 0.95);
   position: absolute;
   top: 0;
   left: 0;
@@ -271,7 +275,7 @@ header {
   border: none;
   background-color: #8a9378;
   padding: 1.6rem 3.6rem;
-  color: #fffbf6;
+  color: #fcfff7;
   box-shadow: 0 0 1rem rgba(22, 24, 17, 0.268);
   transition: all 0.2s;
   text-decoration: none;
@@ -290,7 +294,6 @@ header {
 }
 
 .section {
-  gap: 4.8rem;
   width: 80%;
 }
 
@@ -323,7 +326,7 @@ header {
 
 .page-text-box {
   margin-bottom: 6.4rem;
-  width: 75%;
+  width: 95%;
 }
 
 .page-text,
@@ -371,7 +374,7 @@ header {
 
 .instagram-heading {
   font-weight: 400;
-  color: #fffbf6;
+  color: #fcfff7;
   margin-bottom: 1.5rem;
   text-decoration: none;
   margin-right: 3.6rem;
@@ -393,7 +396,7 @@ header {
 .instagram-gallery {
   gap: 1.6rem;
   padding: 1.6rem;
-  background-color: #fffbf6;
+  background-color: #fcfff7;
 }
 
 .gallery-item {
@@ -423,16 +426,16 @@ header {
 }
 
 .pattern-heading {
-  color: #fffbf6;
+  color: #fcfff7;
 }
 
 .pattern-sheet {
-  padding: 2.4rem 0 9.6rem 0;
+  padding-top: 2.4rem;
 }
 
 /* PATTERN CARD */
 .pattern-card {
-  background-color: #e2e4dd;
+  background-color: #fcfff7;
   padding: 2.4rem;
   box-shadow: 0 2.4rem 4.8rem rgba(52, 58, 64, 0.08);
   transition: all 0.4s;
@@ -482,7 +485,7 @@ header {
   content: "norsk";
   font-size: 1.6rem;
   color: #6d7856;
-  background-color: #e2e4dd;
+  background-color: #fcfff7;
   position: absolute;
   top: 4%;
   left: 5%;
@@ -495,7 +498,7 @@ header {
   content: "svenska";
   font-size: 1.6rem;
   color: #6d7856;
-  background-color: #e2e4dd;
+  background-color: #fcfff7;
   position: absolute;
   top: 4%;
   left: 5%;
@@ -508,7 +511,7 @@ header {
   content: "english";
   font-size: 1.6rem;
   color: #6d7856;
-  background-color: #e2e4dd;
+  background-color: #fcfff7;
   position: absolute;
   top: 4%;
   left: 5%;
@@ -529,7 +532,7 @@ header {
   text-transform: uppercase;
   font-weight: 500;
   font-size: 2rem;
-  color: #fffbf6;
+  color: #fcfff7;
   letter-spacing: 0.5rem;
   padding: 0 0 1rem 1rem;
   cursor: pointer;
@@ -564,7 +567,7 @@ header {
 
 .filter-item {
   font-size: 2rem;
-  color: #fffbf6;
+  color: #fcfff7;
   font-weight: 400;
   text-decoration: none;
   padding: 0.5rem 1rem;
@@ -617,15 +620,47 @@ header {
 }
 
 /* **************************** */
-/* LOCAL PAGES */
+/* PRIVACY SECTION */
 /* **************************** */
-
+.privacy-policy-section {
+  background-color: #8a9378;
+}
+.section-left {
+  border-right: 1px solid #6d7856;
+}
+.heading-light {
+  color: #fcfff7;
+}
 .page-heading-secondary {
   text-transform: uppercase;
   font-weight: 500;
-  color: #576045;
+  color: #fff;
   letter-spacing: 0.5rem;
   margin-bottom: 1.6rem;
+  font-size: 20px;
+}
+
+.page-text-light {
+  line-height: 1.6;
+  color: #fcfff7;
+}
+
+.list-item-light {
+  line-height: 1.6;
+  color: #fcfff7;
+}
+
+.link-light:link,
+.link-light:visited {
+  text-decoration: none;
+  color: #fcfff7;
+  margin-bottom: 3.2rem;
+}
+
+.link-light:hover,
+.link-light:active {
+  color: #e2e4dd;
+  transition: all 0.3s;
 }
 
 /* **************************** */
@@ -711,7 +746,7 @@ header {
 }
 
 .add-cart-icon--btn {
-  color: #fffbf6;
+  color: #fcfff7;
   margin-right: 1rem;
 }
 
